--- a/index.html
+++ b/index.html
@@ -100,6 +100,34 @@
             border-color: var(--primary-color);
         }
 
+        select {
+            padding: 10px;
+            border: 2px solid #ddd;
+            border-radius: var(--border-radius);
+            font-size: 16px;
+            transition: all 0.3s ease;
+            appearance: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23333' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpolyline points='6 9 12 15 18 9'%3e%3c/polyline%3e%3c/svg%3e");
+            background-repeat: no-repeat;
+            background-position: left 10px center;
+            background-size: 15px;
+            padding-left: 35px;
+            cursor: pointer;
+            background-color: white;
+        }
+
+        select:focus {
+            outline: none;
+            border-color: var(--primary-color);
+            box-shadow: 0 0 0 3px rgba(74, 144, 226, 0.1);
+        }
+
+        select:hover {
+            border-color: #bbb;
+        }
+
         #wordList {
             width: 100%;
             height: 150px;
@@ -191,7 +219,8 @@
                 display: grid;
                 gap: 20px;
                 padding: 20px;
-                page-break-after: always;
+                page-break-inside: avoid;
+                page-break-after: avoid;
             }
             .print-grid[data-puzzles="1"] {
                 grid-template-columns: 1fr;
@@ -228,6 +257,18 @@
             }
             .puzzle-instance .puzzle-title {
                 font-size: calc(1.8em / var(--scale-factor));
+            }
+            .puzzle-instance .word-list {
+                margin-top: 10px;
+                font-size: calc(16px / var(--scale-factor));
+            }
+            .puzzle-instance .word-list h3 {
+                font-size: calc(1.2em / var(--scale-factor));
+                margin: 5px 0;
+            }
+            .puzzle-instance .word-item {
+                font-size: calc(14px / var(--scale-factor));
+                padding: calc(5px / var(--scale-factor)) calc(15px / var(--scale-factor));
             }
         }
 
@@ -485,7 +526,7 @@
                 const puzzleInstance = document.createElement('div');
                 puzzleInstance.className = 'puzzle-instance';
                 puzzleInstance.innerHTML = puzzleContent;
-                if (withWords && i === puzzlesPerPage - 1) {
+                if (withWords) {
                     const wordListClone = wordList.cloneNode(true);
                     wordListClone.classList.remove('hidden');
                     puzzleInstance.appendChild(wordListClone);
