--- a/index.html
+++ b/index.html
@@ -903,11 +903,13 @@
 
         function showHelp() {
             document.getElementById('helpModal').style.display = 'flex';
+            document.body.style.overflow = 'hidden';
         }
 
         function hideHelp(event) {
             if (event.target.id === 'helpModal' || event.target.className === 'close-help') {
                 document.getElementById('helpModal').style.display = 'none';
+                document.body.style.overflow = '';
             }
         }
 
