--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             padding: var(--spacing);
             background-color: #f9f9f9;
             line-height: 1.6;
+            min-width: 320px;
         }
 
         h1 {
@@ -35,6 +36,9 @@
             padding: var(--spacing);
             border-radius: var(--border-radius);
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            width: 100%;
+            box-sizing: border-box;
+            overflow: hidden;
         }
 
         .grid {
@@ -70,17 +74,138 @@
             display: grid;
             gap: 15px;
             margin-bottom: var(--spacing);
+            width: 100%;
+        }
+
+        .dimensions {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 15px;
+            align-items: center;
+            width: 100%;
         }
 
         .input-group {
             display: grid;
             gap: 10px;
+            width: 100%;
         }
 
-        .dimensions {
+        .dimensions .input-group {
+            flex: 1 1 200px;
+            min-width: 200px;
+            max-width: 100%;
+        }
+
+        textarea, input[type="text"], input[type="number"], select {
+            width: 100%;
+            box-sizing: border-box;
+            height: 42px;
+            line-height: normal;
+        }
+
+        textarea {
+            height: 150px;
+        }
+
+        .button-group {
             display: flex;
-            gap: 15px;
-            align-items: center;
+            flex-wrap: wrap;
+            gap: 10px;
+            justify-content: center;
+            width: 100%;
+        }
+
+        button {
+            padding: 12px 24px;
+            white-space: nowrap;
+            border: none;
+            border-radius: var(--border-radius);
+            font-size: 16px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: transform 0.2s, box-shadow 0.2s;
+            background: var(--primary-color);
+            color: white;
+        }
+
+        button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+        }
+
+        button.print {
+            background: #28a745;
+        }
+
+        button.secondary {
+            background: #6c757d;
+        }
+
+        @media (max-width: 768px) {
+            .dimensions {
+                flex-direction: row;
+                flex-wrap: wrap;
+                gap: 10px;
+            }
+            
+            .dimensions .input-group {
+                flex: 1 1 auto;
+                min-width: 0;
+                width: auto;
+                margin: 0;
+                display: flex;
+                align-items: center;
+                gap: 8px;
+            }
+
+            .dimensions .input-group label {
+                white-space: nowrap;
+                margin: 0;
+            }
+
+            .dimensions input[type="number"] {
+                width: 60px;
+                min-width: 60px;
+            }
+
+            .dimensions select {
+                width: auto;
+                min-width: 120px;
+            }
+
+            .controls {
+                gap: 15px;
+            }
+
+            .button-group {
+                flex-direction: column;
+                gap: 8px;
+                align-items: center;
+            }
+
+            button {
+                width: auto;
+                min-width: 200px;
+            }
+
+            .input-group {
+                gap: 5px;
+            }
+
+            textarea:not(#wordList), input[type="text"], input[type="number"], select {
+                height: 38px;
+                padding: 6px 8px 6px 35px;
+                text-align: right;
+            }
+
+            #wordList {
+                height: 120px;
+            }
+
+            #puzzleTitle {
+                width: 100%;
+            }
         }
 
         .font-rashi {
@@ -117,7 +242,7 @@
         }
 
         select {
-            padding: 10px;
+            padding: 8px 10px 8px 35px;
             border: 2px solid #ddd;
             border-radius: var(--border-radius);
             font-size: 16px;
@@ -129,9 +254,16 @@
             background-repeat: no-repeat;
             background-position: left 10px center;
             background-size: 15px;
-            padding-left: 35px;
             cursor: pointer;
             background-color: white;
+            height: 42px;
+            box-sizing: border-box;
+            text-align: right;
+        }
+
+        select option {
+            padding: 10px;
+            line-height: 1.2;
         }
 
         select:focus {
@@ -148,38 +280,6 @@
             width: 100%;
             height: 150px;
             resize: vertical;
-        }
-
-        .button-group {
-            display: flex;
-            gap: 10px;
-            margin-top: 15px;
-            justify-content: center;
-        }
-
-        button {
-            padding: 12px 24px;
-            border: none;
-            border-radius: var(--border-radius);
-            font-size: 16px;
-            font-weight: 600;
-            cursor: pointer;
-            transition: transform 0.2s, box-shadow 0.2s;
-            background: var(--primary-color);
-            color: white;
-        }
-
-        button:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-        }
-
-        button.print {
-            background: #28a745;
-        }
-
-        button.secondary {
-            background: #6c757d;
         }
 
         .word-list {
@@ -356,6 +456,7 @@
             left: 20px;
             width: 40px;
             height: 40px;
+            min-width: unset;
             background: var(--primary-color);
             border: none;
             border-radius: 50%;
@@ -368,6 +469,7 @@
             align-items: center;
             justify-content: center;
             z-index: 1000;
+            padding: 0;
         }
 
         .help-button:hover {
@@ -540,7 +642,7 @@
         <div id="wordListDisplay" class="word-list"></div>
     </div>
 
-    <button class="help-button" onclick="showHelp()">❔</button>
+    <button class="help-button" onclick="showHelp()" style="color: white;">?</button>
     
     <div class="help-modal" id="helpModal" onclick="hideHelp(event)">
         <div class="help-content">
