--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             display: grid;
             gap: 10px;
             width: 100%;
+            box-sizing: border-box;
         }
 
         .dimensions .input-group {
@@ -102,6 +103,7 @@
             box-sizing: border-box;
             height: 42px;
             line-height: normal;
+            padding: 10px;
         }
 
         textarea {
@@ -143,6 +145,31 @@
         }
 
         @media (max-width: 768px) {
+            .container {
+                padding: 15px;
+            }
+
+            h1 {
+                font-size: 2em;
+                margin: 15px 0;
+                padding: 0 5px;
+            }
+
+            .input-group {
+                padding: 0;
+            }
+
+            textarea:not(#wordList), input[type="text"], input[type="number"], select {
+                height: 38px;
+                padding: 6px 8px;
+                text-align: right;
+            }
+
+            #wordList {
+                height: 120px;
+                padding: 8px;
+            }
+
             .dimensions {
                 flex-direction: row;
                 flex-wrap: wrap;
@@ -205,6 +232,32 @@
 
             #puzzleTitle {
                 width: 100%;
+            }
+
+            .help-content {
+                width: 95%;
+                margin: 20px auto;
+            }
+
+            .help-content-header {
+                padding: 15px 20px;
+            }
+
+            .help-content-body {
+                padding: 15px 20px;
+            }
+
+            .close-help {
+                top: 10px;
+                left: 10px;
+                padding: 8px;
+                font-size: 20px;
+            }
+
+            .help-content h2 {
+                font-size: 1.2em;
+                padding-left: 30px;
+                padding-right: 30px;
             }
         }
 
@@ -310,10 +363,11 @@
 
         .pagination {
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
             gap: 15px;
             margin-bottom: 20px;
+            width: 100%;
         }
 
         .pagination button {
@@ -324,11 +378,13 @@
             border-radius: var(--border-radius);
             cursor: pointer;
             transition: all 0.2s;
+            min-width: 100px;
         }
 
         .pagination button:disabled {
             background: #ccc;
             cursor: not-allowed;
+            opacity: 0.7;
         }
 
         .pagination button:hover:not(:disabled) {
@@ -339,6 +395,8 @@
         .pagination span {
             font-weight: 500;
             color: #333;
+            flex: 1;
+            text-align: center;
         }
 
         @media print {
@@ -560,6 +618,12 @@
             color: #666;
             padding: 5px;
             z-index: 2;
+            min-width: unset;
+            width: 40px;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .close-help:hover {
