Add more search directions for word puzzle grid generation
- Expanded search directions to include left, up, down-left, and up-left movements
- Updated grid search algorithm to support 8 directional search patterns
- Improved word placement flexibility in puzzle generation

--- a/index.html
+++ b/index.html
@@ -1016,9 +1016,13 @@
             const cols = grid[0].length;
             const directions = [
                 [0, 1],   // ימינה
+                [0, -1],  // שמאלה
                 [1, 0],   // למטה
+                [-1, 0],  // למעלה
                 [1, 1],   // אלכסון ימינה-למטה
                 [-1, 1],  // אלכסון ימינה-למעלה
+                [1, -1],  // אלכסון שמאלה-למטה
+                [-1, -1], // אלכסון שמאלה-למעלה
             ];
 
             for (let attempt = 0; attempt < 20; attempt++) {
